Reduce some of the unnecessary whitespace in EO table. Fix FR box description when no header seal is present.

--- a/app/assets/stylesheets/design/executive_orders.scss
+++ b/app/assets/stylesheets/design/executive_orders.scss
@@ -50,9 +50,17 @@
   }
 
   .executive-order-wrapper {
+    &.row {
+      margin-bottom: 10px !important;
+
+      .row { margin-bottom: 10px !important; }
+    }
+
     .eo-number {
       padding-right: 0;
     }
+
+    dl { margin-bottom: 10px; }
 
     dt,
     dd {
